[package]
name = "serve-files"
version = "1.0.0"
authors = ["Davi Reis <reis.davi11010@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Simplest local files server!"
readme = "README.md"
homepage = "https://github.com/dreisss/.files/server"
repository = "https://github.com/dreisss/.files"
keywords = ["cli", "server", "files"]
categories = ["command-line-utilities", "server"]

[dependencies]

[[bin]]
name = "serve"
